plugins {
    id 'java'
    id 'application'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'gnu.getopt:java-getopt:1.0.13'
    implementation 'org.yaml:snakeyaml:2.2'

    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.hamcrest:hamcrest-core:1.3'
    testImplementation 'org.mockito:mockito-core:5.14.2'
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

application {
    mainClass = 'qualm.Qualm'
}

sourceSets {
    main {
        java { srcDirs = ['src'] }
    }
    test {
        java {
            srcDirs = ['tests']
            }
    }
}

tasks.register('xmlToYamlStartScripts', CreateStartScripts) {
    mainClass = 'qualm.QualmXMLToYAML'
    applicationName = 'qualm-xml-to-yaml'
    outputDir = startScripts.outputDir
    classpath = startScripts.classpath
}

startScripts.dependsOn('xmlToYamlStartScripts')

run {
    standardInput = System.in
}

test {
    // run from project root so relative paths in tests (e.g. "tests/qualm/qdl-1.yaml") resolve
    workingDir = projectDir
    jvmArgs '-Dnet.bytebuddy.experimental=true'
    exclude '**/StressTest.class'
    testLogging {
        events 'passed', 'failed', 'skipped'
        exceptionFormat = 'full'
    }
}
